<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_headportrait"
            android:layout_width="144dp"
            android:layout_height="144dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            tools:srcCompat="@mipmap/icon" />

        <LinearLayout
            android:id="@+id/layout_account"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_headportrait">

            <TextView
                android:layout_marginStart="30dp"
                android:id="@+id/text_account"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="20sp" />

            <EditText
                android:layout_marginStart="24dp"
                android:id="@+id/edit_account"
                android:paddingStart="18dp"
                android:background="@drawable/edit_rounded_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/account_hint"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_account"
            app:layout_constraintVertical_bias="0.06">

            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/password"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@drawable/edit_rounded_frame"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register"
            android:textSize="10pt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button_rounded_frame"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password" />

        <Button
            android:id="@+id/btn_authorize"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_frame"
            android:text="@string/authorized_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="10pt"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>